--- a/sled_collections/templates/sled_collections/collection_give_revoke_access.html
+++ b/sled_collections/templates/sled_collections/collection_give_revoke_access.html
@@ -52,7 +52,7 @@ Give access to Users and Groups?
 
 
 {% block extrascripts %}
-<script>
+<script type="text/javascript" nonce="{{request.csp_nonce}}">
   users_autocomplete("id_users");
   groups_autocomplete("id_groups");
 
