--- a/sled_single_objects/templates/sled_single_objects/so_cede_ownership.html
+++ b/sled_single_objects/templates/sled_single_objects/so_cede_ownership.html
@@ -64,7 +64,7 @@ Cede ownership?
 
 
 {% block extrascripts %}
-<script>
+<script type="text/javascript" nonce="{{request.csp_nonce}}">
   users_autocomplete('id_heir');
 
   // The following is needed for select2 to work properly in a modal
