--- a/sled_tasks/templates/sled_tasks/task_list_recipient.html
+++ b/sled_tasks/templates/sled_tasks/task_list_recipient.html
@@ -20,12 +20,12 @@
     <tr>
       <td>
         {% if task.status == "P" %}
-        <span style="font-weight:bold;color:red">
+        <span class="jb-bold jb-color-red">
           {{ task.status }}
         </span>
 
         {% else %}
-        <span style="font-weight:bold;color:green">
+        <span class="jb-bold jb-color-green">
           {{ task.status }}
         </span>
         {% endif %}
