--- a/lenses/static/lenses/css/lens_detail.css
+++ b/lenses/static/lenses/css/lens_detail.css
@@ -54,7 +54,40 @@
     padding-bottom: 2px;
     border-top: 0px solid #ACACAC;
 }
-.lens-summary  td:first-child {
+.lens-summary td:first-child {
     width: 200px;
     color: #ACACAC;
-}​
+}
+
+.created-at {
+    margin-bottom: 2px;
+}
+
+.margin-left {
+    margin-left: 10px;
+}
+
+.no-wrap {
+    white-space: nowrap;
+}
+
+.overflow-hidden {
+    overflow: hidden;
+}
+
+.padding-right {
+    padding-right: 10px;
+}
+
+.catalogue-div {
+    width: 75%;
+    margin: auto;
+}
+			     
+.catalogue-td {
+    padding-right: 60px;
+}
+
+.align-center {
+    text-align: center;
+}
