--- a/lenses/static/lenses/css/lens_query.css
+++ b/lenses/static/lenses/css/lens_query.css
@@ -128,3 +128,8 @@ input:checked + .slider:before {
     width: 1%;
     white-space: nowrap;
 }
+
+.data-query-table {
+    margin-top: 0px;
+    height: 30px;
+}
