--- a/sled_groups/templates/sled_groups/group_detail.html
+++ b/sled_groups/templates/sled_groups/group_detail.html
@@ -11,7 +11,7 @@
 
 <div class="jb-container">
   <h1 class="jb-heading-1">{{ group.name }}</h1>
-  <p style="margin-bottom:2px">
+  <p class="created-at">
     Created at: {{ group.created_at }}
   </p>
 
@@ -30,11 +30,11 @@
   <!-- Div with some information about the group -->
   <div>
     <h1 class="jb-heading-2">Group Information</h1>
-    <table>
+    <table class="group-info">
       <tr>
-        <th style="width:100px">Owner</th>
-        <th style="width:120px">Members</th>
-        <th style="width:120px">Access level</th>
+        <th>Owner</th>
+        <th>Members</th>
+        <th>Access level</th>
         <th>Description</th>
       </tr>
       <tr>
@@ -166,7 +166,7 @@
 	<td>
 	  <a href="{{ redshift.lens.get_absolute_url }}">{{ redshift.lens }}</a>
 	</td>
-	<td style="padding-right:10px;">
+	<td class="padding-right">
 	  Z<sub>{{ redshift.tag }}</sub> = {{ redshift.value.normalize }}<span class="supsub"><sub>-{{ redshift.dvalue_min.normalize }}</sub><sup>+{{ redshift.dvalue_max.normalize }}</sup></span>
 	</td>
 	<td>
@@ -203,7 +203,7 @@
     <tbody>
       {% for imaging in qset %}
       <tr>
-	<td style="text-align:center" valign="'middle">
+	<td class="align-center" valign="'middle">
 	  {% if imaging.future %}
 	  Future
 	  {% else %}
@@ -252,7 +252,7 @@
     <tbody>
       {% for generic_image in qset %}
       <tr>
-	<td style="text-align:center" valign="'middle">
+	<td class="align-center" valign="'middle">
 	  <img class="sled-mugshot-icon" src="{{ generic_image.image.url }}">
 	</td>
 	<td>
@@ -295,7 +295,7 @@
     <tbody>
       {% for spectrum in qset %}
       <tr>
-	<td style="text-align:center" valign="'middle">
+	<td class="align-center" valign="'middle">
 	  {% if spectrum.future %}
 	  Future
 	  {% else %}
@@ -347,6 +347,7 @@
 {% block extrastyles %}
 <!-- THe line below is to style the drop down auto-complete text input -->
 <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+<link href="{% static 'sled_groups/css/group_detail.css' %}" rel="stylesheet" />
 {% endblock extrastyles %}
 
 
@@ -355,27 +356,5 @@
 <script type="text/javascript" src="{% static 'lenses/js/autocomplete.js' %}"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
 <script type="text/javascript" src="{% static 'js/jquery.bootstrap.modal.forms.js' %}"></script>
-<script type="text/javascript">
-  $(document).ready(function() {
-
-    // Modals
-    $('#delete-group').modalForm({
-      formURL: $('#delete-group').data("form-url"),
-      modalID: "#id-modal",
-      isDeleteForm: true
-    });
-
-    $(".sled-modal").each(function() {
-      $(this).modalForm({
-        formURL: $(this).data("form-url"),
-        modalID: "#id-modal"
-      });
-    });
-
-    $("#ask-to-join-group").modalForm({
-      formURL: $("#ask-to-join-group").data("form-url"),
-      modalID: "#id-modal"
-    });
-  });
-</script>
+<script type="text/javascript" src="{% static 'sled_groups/js/group_detail.js' %}"></script>
 {% endblock extrascripts %}
