--- a/sled_groups/templates/sled_groups/group_split_list.html
+++ b/sled_groups/templates/sled_groups/group_split_list.html
@@ -122,12 +122,5 @@
 <script type="text/javascript" src="{% static 'lenses/js/autocomplete.js' %}"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
 <script type="text/javascript" src="{% static 'js/jquery.bootstrap.modal.forms.js' %}"></script>
-<script type="text/javascript">
-  $(document).ready(function() {
-    $("#create-new-group").modalForm({
-      formURL: $("#create-new-group").data("form-url"),
-      modalID: "#id-modal"
-    });
-  });
-</script>
+<script type="text/javascript" src="{% static 'sled_groups/js/group_list.js' %}"></script>
 {% endblock extrascripts %}
