--- a/templates/activity_object_modal.html
+++ b/templates/activity_object_modal.html
@@ -8,7 +8,7 @@
     <!-- Modal content-->
     <div class="modal-content">
       <div class="modal-header">
-        <h4 class="modal-title" style="color:black">All Activity</h4>
+        <h4 class="modal-title">All Activity</h4>
         <button type="button" class="close" data-dismiss="modal">&times;</button>
       </div>
       <div class="modal-body">
